Update graylog2-server/src/main/java/org/graylog2/streams/StreamServiceImpl.java
Co-authored-by: Florian Petersen <188503754+fpetersen-gl@users.noreply.github.com>